rust_writer_procedural/tests/ui/compile_fail/mutator_fails_if_not_applied_to_struct.rs
// SPDX-License-Identifier: GPL-3.0

use rust_writer_procedural::mutator;

#[mutator(a, b, c)]
enum SomeEnum {
	A,
	B,
	C,
}

fn main() {}
